src/objects/Incident__c.object
<CustomObject>
    <fields>
        <fullName>Actions__c</fullName>
        <label>Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Affecting_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affecting Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_Date__c</fullName>
        <description>Date on which the incident was discovered</description>
        <label>Discovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Date__c</fullName>
        <description>Date at the which the incident started occurring</description>
        <label>Incident Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refer_to_Incident_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refer to Incident Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Date__c</fullName>
        <label>Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPReferrer__c</fullName>
        <formula>if( Refer_to_Incident_Management__c = true, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPReferrer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeverityReturnNum__c</fullName>
        <formula>Value(Text(Impact__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SeverityReturnNum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tribe__c</fullName>
        <label>Tribe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Borrowers</fullName>
                </value>
                <value>
                    <fullName>Lenders</fullName>
                </value>
                <value>
                    <fullName>New Markets</fullName>
                </value>
                <value>
                    <fullName>Service Excellence</fullName>
                </value>
                <value>
                    <fullName>Traffic</fullName>
                </value>
                <value>
                    <fullName>Vulcans</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3rd_Party__c</fullName>
        <label>3rd Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bankline</fullName>
                </value>
                <value>
                    <fullName>Call-Credit</fullName>
                </value>
                <value>
                    <fullName>Equifax</fullName>
                </value>
                <value>
                    <fullName>Experian</fullName>
                </value>
                <value>
                    <fullName>Oakbrook</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Unified Software</fullName>
                </value>
                <value>
                    <fullName>Qube</fullName>
                </value>
                <value>
                    <fullName>C4L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Month__c</fullName>
        <formula>TEXT(year(datevalue(CreatedDate))) &amp; &quot;-&quot; &amp; if(MONTH(datevalue(CreatedDate))&gt;9,TEXT(MONTH(datevalue(CreatedDate))),&quot;0&quot; &amp; TEXT(MONTH(datevalue(CreatedDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year-Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Youtrack__c</fullName>
        <label>Youtrack</label>
        <type>Url</type>
    </fields>
    <label>Incident</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Tribe__c</columns>
        <columns>Impact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Closed</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Incidents</label>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Tribe__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open Incidents</label>
    </listViews>
    <nameField>
        <displayFormat>INCIDENT-{0000}</displayFormat>
        <label>Incident Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>